--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@ document.addEventListener('keydown', function(event) {
                     border-radius: 20px;
                     display: inline-block;
                     box-shadow: 0 4px 15px rgba(0, 61, 122, 0.15);">
-            <img src="qr-code-obzr.png" 
+            <img src="qr-code-obzr.png.png" 
                  alt="QR-код сайта преподавателя ОБЗР" 
                  style="width: 280px; 
                         height: 280px; 
