--- a/index.html
+++ b/index.html
@@ -848,6 +848,56 @@ document.addEventListener('keydown', function(event) {
                 border-right: 8px solid transparent;
                 border-top: 8px solid #003D7A;"></div>
 </div>
+<!-- Плавающая кнопка (ПЕРЕТАСКИВАЕМАЯ) -->
+<div id="qrFloatingButton" 
+     style="position: fixed; 
+            bottom: 30px; 
+            right: 30px; 
+            width: 65px; 
+            height: 65px; 
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
+            border-radius: 50%; 
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4); 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            cursor: move;
+            z-index: 10000; 
+            transition: box-shadow 0.3s ease;
+            animation: pulse 2s infinite;
+            touch-action: none;
+            user-select: none;">
+    <span style="font-size: 2.2rem; 
+                 filter: drop-shadow(0 2px 4px rgba(0,0,0,0.2));
+                 pointer-events: none;">📱</span>
+</div>
+
+<!-- Подсказка (появляется при первом посещении) -->
+<div id="qrButtonHint" 
+     style="position: fixed;
+            bottom: 110px;
+            right: 30px;
+            background: #003D7A;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 10px;
+            font-size: 0.85rem;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            z-index: 9999;
+            display: none;
+            max-width: 200px;
+            text-align: center;
+            animation: fadeIn 0.3s ease;">
+    💡 Удерживайте для перемещения
+    <div style="position: absolute;
+                bottom: -8px;
+                right: 20px;
+                width: 0;
+                height: 0;
+                border-left: 8px solid transparent;
+                border-right: 8px solid transparent;
+                border-top: 8px solid #003D7A;"></div>
+</div>
 
 <!-- Всплывающее окно (модальное окно с QR-кодом) -->
 <div id="qrModalWindow" 
