--- a/novosti.html
+++ b/novosti.html
@@ -981,22 +981,33 @@
             </article>
 
             <!-- Новость 4 -->
-            <article class="news-card" data-category="event">
+            <article class="news-card" data-category="competition">
                 <div class="news-card-image">
-                    <span class="news-card-placeholder">🚒</span>
+                    <span class="news-card-placeholder">⭐</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 5 ноября 2025</span>
-                        <span class="news-card-category event">Мероприятия</span>
+                        <span class="news-card-date">📅 17 октября 2025</span>
+                        <span class="news-card-category competition">События</span>
                     </div>
-                    <h3 class="news-card-title">Экскурсия в пожарную часть для учеников 8 класса</h3>
+                    <h3 class="news-card-title">Девятиклассники посетили мероприятие «День призывника»</h3>
                     <p class="news-card-excerpt">
-                        Состоялась познавательная экскурсия в пожарную часть № 42 г. Лысково. Ребята познакомились с работой спасателей, увидели пожарную технику, примерили экипировку и узнали о правилах пожарной безопасности.
+                    Во Дворце культуры города Лысково состоялось традиционное для осени событие...
                     </p>
+                    
+                    <div class="news-card-full-text">
+                        <p>Во Дворце культуры города Лысково состоялось традиционное для осени событие – День призывника,
+                        которое посетили ученики 9-х классов нашей школы. Во время праздника школьники посмотрели
+                        концертные номера и тематические выступления, посвященные службе в армии и защитникам Отечества. 
+                        Перед ребятами выступили действующие военнослужащие, ветераны, представители военкомата и 
+                        районной администрации. Они рассказали о традициях российской армии, порядке прохождения службы, 
+                        возможностях обучения в военных вузах и служебных перспективах.  </p>
+                        <p>Такие встречи помогают подросткам осознать значимость службы Родине и стимулируют интерес 
+                            к выбору профессий, связанных с обеспечением безопасности страны.</p>
+                    </div>
                     <div class="news-card-footer">
-                        <a href="#" class="news-card-link">Подробнее</a>
-                        <a href="https://mchs.gov.ru" target="_blank" class="news-card-external">Источник ↗</a>
+                        <button class="news-toggle-btn" onclick="toggleNews(this)">Подробнее ▼</button>
+                     <a href="https://vk.com/wall-64826566_37719 " target="_blank" class="news-card-external">Эта новость в VK ↗</a>
                     </div>
                 </div>
             </article>
