--- a/konspekty-urokov.html
+++ b/konspekty-urokov.html
@@ -1114,27 +1114,27 @@ body.modal-open {
                     <li class="has-submenu">
                         <a href="index.html" onclick="return handleSubmenuClick(event, this)">Главная</a>
                         <ul class="submenu">
-                            <li><a href="o-predmete-obzr">О предмете ОБЗР</a></li>
-                            <li><a href="novosti">Последние новости</a></li>
+                            <li><a href="o-predmete-obzr.html">О предмете ОБЗР</a></li>
+                            <li><a href="novosti.html">Последние новости</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
                         <ul class="submenu">
-                            <li><a href="obrazovanie">Образование</a></li>
-                            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
-                            <li><a href="nagrady">Награды и достижения</a></li>
+                            <li><a href="obrazovanie.html">Образование</a></li>
+                            <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
+                            <li><a href="nagrady.html">Награды и достижения</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
                         <ul class="submenu">
-                            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-                            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
-                            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
-                            <li><a href="dokumenty-portfolio">Документы портфолио</a></li>
+                            <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
+                            <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
+                            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -1151,10 +1151,10 @@ body.modal-open {
                     <li class="has-submenu">
                         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
-                            <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
-                            <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
-                            <li><a href="ai-dlya-kolleg">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
+                            <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
+                            <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -1173,12 +1173,12 @@ body.modal-open {
                     <li class="has-submenu">
                         <a href="parents.html" onclick="return handleSubmenuClick(event, this)">Родителям</a>
                         <ul class="submenu">
-                            <li><a href="help-at-home">Как помочь ребёнку дома</a></li>
-                            <li><a href="training-camps">Готовимся к учебным сборам</a></li>
-                            <li><a href="safety-dialogue">Диалоги о безопасности</a></li>
-                            <li><a href="feedback">Обратная связь</a></li>
-                            <li><a href="grading">Как оценивается ОБЗР</a></li>
-                            <li><a href="faq">Часто задаваемые вопросы (FAQ)</a></li>
+                            <li><a href="help-at-home.html">Как помочь ребёнку дома</a></li>
+                            <li><a href="training-camps.html">Готовимся к учебным сборам</a></li>
+                            <li><a href="safety-dialogue.html">Диалоги о безопасности</a></li>
+                            <li><a href="feedback.html">Обратная связь</a></li>
+                            <li><a href="grading.html">Как оценивается ОБЗР</a></li>
+                            <li><a href="faq.html">Часто задаваемые вопросы (FAQ)</a></li>
                         </ul>
                     </li>
                   
@@ -1188,13 +1188,14 @@ body.modal-open {
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
                      <li class="has-submenu">
                         <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
-                            <li><a href="interactive">Оставить отзыв о работе сайта</a></li> 
+                            <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
                     </li>
                 </ul>                        
