--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -642,8 +642,8 @@
                     <li class="has-submenu">
                         <a href="index.html" onclick="return handleSubmenuClick(event, this)">Главная</a>
                         <ul class="submenu">
-                            <li><a href="o-predmete-obzr">О предмете ОБЗР</a></li>
-                            <li><a href="novosti">Последние новости</a></li>
+                            <li><a href="o-predmete-obzr.html">О предмете ОБЗР</a></li>
+                            <li><a href="novosti.html">Последние новости</a></li>
                         </ul>
                     </li>
 
@@ -659,10 +659,10 @@
                     <li class="has-submenu">
                         <a href="portfolio.html" class="active" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
                         <ul class="submenu">
-                            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-                            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
-                            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
-                            <li><a href="dokumenty">Документы портфолио</a></li>
+                            <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
+                            <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
+                            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -679,22 +679,22 @@
                     <li class="has-submenu">
                         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
-                            <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
-                            <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
-                            <li><a href="ai-dlya-kolleg">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
+                            <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
+                            <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
+                            <li><a href="ai-poleznye-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
                         <ul class="submenu">
-                            <li><a href="yunarmiya">Юнармия</a></li>
-                            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarnica">Зарница 2.0</a></li>
-                            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-                            <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
+                            <li><a href="yunarmiya.html">Юнармия</a></li>
+                            <li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li>
+                            <li><a href="zarnica.html">Зарница 2.0</a></li>
+                            <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
+                            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
@@ -716,13 +716,14 @@
                             <li><a href="feedback.html">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="interactive" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
-                            <li><a href="interactive">Оставить отзыв о работе сайта</a></li> 
+                            <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
                     </li>
                 </ul>                         
